--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -28,9 +28,11 @@ I'm not a regular Vim user, but I got used to moving around using Vim motions
 The first thing I will do after installing VSCode is to _Vimify_ it by installing Vim extension in VSCode.
 I only need to use basic Vim motions
 
-<Picture src="/images/vscode-setup-2023/vscodevim.png"
-  alt="Vim extension for VSCode Github page"
-  width="894" height="418"/>
+<a href="/images/vscode-setup-2023/vscodevim.png">
+  <Picture src="/images/vscode-setup-2023/vscodevim.png"
+    alt="Vim extension for VSCode Github page"
+    width="894" height="418"/>
+</a>
 
 Then I remap `esc` to `jk` to quickly switch from Insert mode to Command mode.
 It's the same mapping I use in Vim.
@@ -48,9 +50,11 @@ Another setting I have enabled is sharing the clipboard with the system.
 This allows me to paste text from the system's clipboard in Vim mode using `p`,
 and vice-versa - allows me to copy the text in Vim mode (`y` or `yy`) and paste into another application.
 
-<Picture src="/images/vscode-setup-2023/vim-system-clipboard.png"
-  alt="Vim mode's settings to share clipboard with system"
-  width="543" height="282"/>
+<a href="/images/vscode-setup-2023/vim-system-clipboard.png">
+  <Picture src="/images/vscode-setup-2023/vim-system-clipboard.png"
+    alt="Vim mode's settings to share clipboard with system"
+    width="1586" height="686"/>
+</a>
 
 I also have to disable _Press and Hold_ feature of the keyboard at the system level.
 This allows me to have key repeat working as intended. E.g. long press `j` becomes `jjjjjj` and not just `j`.
@@ -87,14 +91,35 @@ or things that can be accessed with keyboard shortcuts.
 ```
 My typical VSCode window looks like this
 
-<Picture src="/images/vscode-setup-2023/vscode-window.png"
-  alt="my VSCode window"
-  width="1928" height="1518"/>
+<a href="/images/vscode-setup-2023/vscode-window.png">
+  <Picture src="/images/vscode-setup-2023/vscode-window.png"
+    alt="my VSCode window"
+    width="1928" height="1518"/>
+</a>
 
+- Zoom level: +1. Instead of increasing the font size, I like to zoom the whole window to +1 and make the font size smaller at 11px. It renders the same visual size of font size 14 at zoom level 0, but it makes other UI elements bigger and easier to see.
 
-- Zoom level: +1. Instead of increasing the font size, I like to zoom the whole window to +1 and make the font size smaller at 11px. It renders the same visual size of font size 14 at zoom level 0, but it makes other UI elements bigger and easier to read.
+<div class="full-bleed">
+  <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
+    <a href="/images/vscode-setup-2023/zoom-0.png">
+      <Picture src="/images/vscode-setup-2023/zoom-0.png" width="500" alt="VSCode window at zoom level 0, font size 14px"
+        caption="Zoom level 0, font size 14px" />
+    </a>
+    <a href="/images/vscode-setup-2023/zoom-1.png">
+      <Picture src="/images/vscode-setup-2023/zoom-1.png" width="500" alt="VSCode window at zoom level 1, font size 11px"
+        caption="Zoom level 1, font size 11px" />
+    </a>
+  </div>
+</div>
+
 - Increase [Tree Indent in Explorer view](https://armno.in.th/blog/vscode-indent-settings/) from 8px to 16px
-- Disable Peek Preview for multiple references or definitions and remap it to `goto` command instead.
+- Disable Peek Preview for multiple references or definitions - I think this feature is rather annoying than is useful. I instead remap it to `goto` command to always go to the definition at the source file.
+
+<a href="/images/vscode-setup-2023/peek-popup.png">
+  <Picture src="/images/vscode-setup-2023/peek-popup.png"
+    alt="VSCode's peek preview popup" caption="The Peek popup in VSCode"
+    width="1305" height="676"/>
+</a>
 
 ```json
 {
@@ -109,6 +134,44 @@ My typical VSCode window looks like this
 
 ## Search
 
+Search is one of the features in VSCode I use a lot - both normal code search and fuzzy search in the command palette.
+There are a few settings I adjust to make it suit my use cases.
+
+### Ignore images from the Search
+
+When working on a repo with many images in it, it can be disturbing when
+I search for some file name, but the command palette shows me
+the list of images I don't want to open - I never have to open images in VSCode (except of SVGs sometimes).
+
+<a href="/images/vscode-setup-2023/search-with-images.png">
+  <Picture src="/images/vscode-setup-2023/search-with-images.png"
+    alt="Search results with image paths spamming the list"
+    caption="Search results with image paths spamming the list"
+    width="858" height="434"/>
+</a>
+
+I add a glob pattern `**/*.{png,jpg,jpeg,gif,webp}` in `Search: Exclude` settings to exclude images from the command palette and the search result, while still keeping them in the repo.
+
+<div class="full-bleed">
+  <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
+    <a href="/images/vscode-setup-2023/search-exclude-images.png">
+      <Picture src="/images/vscode-setup-2023/search-exclude-images.png"
+        alt="Excluding images from search settings"
+        caption="Excluding images from search settings"
+        width="1080" height="841"/>
+    </a>
+
+    <a href="/images/vscode-setup-2023/search-without-images.png">
+      <Picture src="/images/vscode-setup-2023/search-without-images.png"
+        alt="Search results without image paths spamming the list"
+        caption="Search results without images"
+        width="858" height="434"/>
+    </a>
+  </div>
+</div>
+
+### Use Search Editor instead of Search in Files
+
 The default search menu is initially accessible from the primary sidebar.
 There are a few issues there.
 
@@ -116,21 +179,25 @@ There are a few issues there.
 - There is no syntax highlighting in the search text and the results.
 - The panel uses sans-serif font instead of monospace font. It's harder to read the code in san-serif font than in monospace.
 
-<Picture src="/images/vscode-setup-2023/built-in-search.png"
-  alt="VSCode's default search" caption="VSCode's default global search"
-  width="809" height="466"/>
+<a href="/images/vscode-setup-2023/built-in-search.png">
+  <Picture src="/images/vscode-setup-2023/built-in-search.png"
+    alt="VSCode's default search" caption="VSCode's default global search"
+    width="809" height="466"/>
+</a>
 
 The remap the keyboard shortcut to New Search Editor command instead. This opens the search window in a new tab.
 It's easier to skim through the results.
 
-<Picture src="/images/vscode-setup-2023/search-editor-example.png"
-  alt="Search Editor window example" caption="Search Editor window"
-  width="976" height="637"/>
+<a href="/images/vscode-setup-2023/search-editor-example.png">
+  <Picture src="/images/vscode-setup-2023/search-editor-example.png"
+    alt="Search Editor window example" caption="Search Editor window"
+    width="976" height="637"/>
+</a>
 
 However this [Search Editor](https://code.visualstudio.com/docs/editor/codebasics#_search-editor) still have some drawbacks:
 
 - It doesn't update the search result in real-time when the changes are made. I have to press `cmd+shift+R` to refresh search results if the code is updated somewhere else.
-- Its syntax highlighting doesn't work for every language. At the time of writing this article, syntax highlighting doesn't work with `.astro` extension.
+- Its syntax highlighting doesn't work for every language. At the time of writing this article, syntax highlighting doesn't work with `.astro` extension even though I have [the Astro extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) installed.
 
 ## Extensions
 
@@ -155,7 +222,7 @@ Here are extensions I like and have activated most of the time.
 
 Keyboard shortcuts I use often are
 
-- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> to open the almightly Command Palette
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> to open the Command Palette
 - <kbd>cmd</kbd> + <kbd>p</kbd> to open a file
 - <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>f</kbd> to open the Search Editor window
 - <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>o</kbd> to jump to a variable or a method in the file
