--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -12,8 +12,8 @@ layout: '../../../layouts/PostLayout.astro'
 ---
 import Picture from '../../../components/Picture.astro';
 
-I have been using VSCode as my main code editor for many years.
-Since VSCode is highly customizable,
+I have been using VSCode as my main code editor.
+VSCode is highly customizable.
 I like to tweak it here and there from time to time.
 
 Here is my current setup of VSCode, and how I use it.
