--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -1,19 +1,22 @@
 ---
 title: 'Corne Mechanical Keyboard Build Logs'
 pubDate: '2023-06-16T15:26:42.937Z'
-----
+---
 
 I entered the rabbit hole of mechanical keyboards since 2017. Since the last couple years, I settle with 65% form factor which I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few 60% ones.
 
-But a person cannot have enough keyboards. I always want to try another layout like Alice, or even to build a hand-wired mechanical keyboard, which I never get started. I did some research about handwiring and found this video by Joe Scotto interesting, but I feel that’s still a lot of work to do https://www.youtube.com/watch?v=hjml-K-pV4E. Then I check out his channel and found a few videos about the Corne Keyboard. It is a split one. I knew nothing about split keyboards but it looks interesting so I decide to give it try and see how it goes.
+But a person cannot have enough keyboards. I always want to try another layout like Alice, or even to build a hand-wired mechanical keyboard, which I never get started.
+I did some research about handwiring and found a video by Joe Scotto interesting: [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E), but I feel that's still a lot of work to do.
 
-The Corne Keyboard https://github.com/foostan/crkbd is an opensource split keyboard designed by foostan. It has a few different variations that support both traditional MX or low profile switches, and can be built with either 5 or 6 columns. I chose the MX version because I already MX switches and keycaps around. The Github repo also has very details documentation for every variation.
+Then I check out his channel and found a few videos about the **Corne Keyboard**. It is a split keyboard. I knew nothing about split keyboards but it looks interesting so I decide to give it try and see how it goes.
+
+[**The Corne Keyboard**](https://github.com/foostan/crkbd) aka. "crkbd" is an opensource split keyboard designed by foostan. It has a few different variations that support both traditional MX or low profile switches, and can be built with either 5 or 6 columns. I chose the MX version because I already MX switches and keycaps around. The Github repo also has very details documentation for every variation.
 
 ### Getting parts
 
-The parts list on build guide looks intimidating to me. I have no idea what TRRS or WS2812B mean. So I play safe by getting a set from Beekeeb shop on Etsy that includes everything I need (and don’t need actually) in one package. The set I get is the Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy. Kit option is “PCB + Parts”. It costs me HKD 982.40 / ฿4,345.39 / ~$125.
+The parts list on build guide looks intimidating to me. I have no idea what TRRS or WS2812B mean. So I play safe by getting a set from Beekeeb shop on Etsy that includes everything I need (and don't need actually) in one package. The set I get is the [Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB](https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy). Kit option is “PCB + Parts”. It costs me HKD 982.40 / ฿4,345.39 / ~$125.
 
-While waiting for the parts to deliver, I check out different case designs and choose the one desinged by VOID https://www.printables.com/model/347524-corne-keyboard-case/files. I send the Printable link to a local 3D printing service and get the tented, 6 columns version of the case with PLA material. The case and plates costs me ~900 THB / $26. The outcome is OK though it also has some issues. More on that shortly.
+While waiting for the parts to deliver, I check out different case designs and choose the [one desinged by VOID](https://www.printables.com/model/347524-corne-keyboard-case). I send the Printable link to a local 3D printing service and get the tented, 6 columns version of the case with PLA material. The case and plates costs me ~900 THB / $26. The outcome is OK though it also has some issues. More on that shortly.
 
 ### Installing Diodes, LEDs, and Hotswap Sockets
 
@@ -126,3 +129,4 @@ Overall I’m very happy with my Corne keyboard. It is a fun project and I learn
 I have already a few ideas for the next steps. It will be in a new post then.
 
 Happy Building
+
