add keymaps images

--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -331,11 +331,35 @@ Lesson learned: I will never put a PLA thingy under direct sunlight again.
 
 The keyboard uses QMK firmware so it is customizable with [Via](https://usevia.app/). However, the number of keys are much less than my previous 65% keyboard. It took me some time to come up with keymaps that work for me. As the time of writing it is still not perfect and I still keep tweaking the layouts from time to time. What I have so far are
 
-Layer 0: alpha - traditional QWERTY layout.
+Layer 0: Traditional QWERTY layout.
 
-Layer 1: arrows, symbols for coding, media controls.
+<Picture
+  src={import('./images/layer0.png')}
+  alt="Layer 0 of my Corne Keyboard."
+  widths={[400,800,1600]}
+  aspectRatio={1728/620}
+  width={800}
+/>
 
-Layer 2: more symbols for coding, numbers.
+Layer 1 (lower): Coding symbol, arrows, RBG controls (honestly I just don't know where to put these)
+
+<Picture
+  src={import('./images/layer-lower.png')}
+  alt="Layer 2 of my Corne Keyboard."
+  widths={[400,800,1600]}
+  aspectRatio={1728/620}
+  width={800}
+/>
+
+Layer 2 (raised): Numpads, media controls
+
+<Picture
+  src={import('./images/layer-raise.png')}
+  alt="Layer 1 of my Corne Keyboard."
+  widths={[400,800,1600]}
+  aspectRatio={1728/620}
+  width={800}
+/>
 
 I'm not 100% happy with the keymaps yet, especially the coding symbols and numpads that are too different from a normal keyboard layout. I still have a lot to learn to make the most of limited keys.
 
